Fix extension references

--- a/AboutContact.html
+++ b/AboutContact.html
@@ -37,7 +37,7 @@
 
 <div class="textt"> 
 
-<img src="LaptopNo.JPG">
+<img src="LaptopNo.jpg">
 <h1>Learn about Assimilate</h1>
 <p> Assimilate is a social website that connects all your chosen social media accounts into one. You will have one big newsfeed that you can filter through an select what sites to view or choose all, you can select a friend and see all their posts from different social media accounts. </p>
 <p>You can connect with others who use different social media accounts. You can add multiple of your own accounts from one site. </p>
