--- a/Newsfeed.html
+++ b/Newsfeed.html
@@ -24,7 +24,7 @@
  </div>
  
 <div class="ClickLogo">
- <a href="Newsfeed.html"> <img src="logothin.PNG"></a>
+ <a href="Newsfeed.html"> <img src="logothin.png"></a>
  </div>
 
 
