Add existing file

--- a/AboutContact.html
+++ b/AboutContact.html
@@ -14,7 +14,7 @@
 
   <div class="nav">
 <ul>
- <a href="index.html"><img src="logo.png"></a>
+ <a href="index.html"><img src="img/logo.png"></a>
 
 
   <li><a class="active" href="index.html">Home</a></li>
@@ -37,14 +37,14 @@
 
 <div class="textt"> 
 
-<img src="LaptopNo.jpg">
+<img src="img/LaptopNo.jpg">
 <h1>Learn about Assimilate</h1>
 <p> Assimilate is a social website that connects all your chosen social media accounts into one. You will have one big newsfeed that you can filter through an select what sites to view or choose all, you can select a friend and see all their posts from different social media accounts. </p>
 <p>You can connect with others who use different social media accounts. You can add multiple of your own accounts from one site. </p>
 <p>You can create a post on Assimilate and then select what social sites you want to post it on. Assimilate supports images, text, videos. Assimilate has no adds to give you the best experience.</p>
 
 
-<img src="WhiteSpace.jpg">
+<img src="img/WhiteSpace.jpg">
 
 <h1 id="Cont">Contact us</h1>
 <p> We are happy to answer any questions or enquires you have for us.</p>
