--- a/Newsfeed.html
+++ b/Newsfeed.html
@@ -24,7 +24,7 @@
  </div>
  
 <div class="ClickLogo">
- <a href="Newsfeed.html"> <img src="logothin.png"></a>
+ <a href="Newsfeed.html"> <img src="img/logothin.png"></a>
  </div>
 
 
@@ -59,42 +59,42 @@
 <div class="container">
 <div class="griding">
 
-  <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
 
-  <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
 
-  <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
 
-  <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
-   <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
  
-   <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
 
-   <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
-    <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
-     <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
-     <img class="border-right" src="PostImage.jpg" alt="" />
-    <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
     
-    <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 
-     <img class="border-right" src="PostImage.jpg" alt="" />
-        <img class="border-right" src="PostImage.jpg" alt="" />
-    <img class="border-right" src="PostImage.jpg" alt="" />
-     <img class="border-right" src="PostImage.jpg" alt="" />
-     <img class="border-right" src="PostImage.jpg" alt="" />
-    <img class="border-right" src="PostImage.jpg" alt="" />
-    <img class="border-right" src="PostImage.jpg" alt="" />
-    <img class="border-right" src="PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
+  <img class="border-right" src="img/PostImage.jpg" alt="" />
 </div>
 </div>
 
@@ -121,11 +121,11 @@
     <div class="modal-header">
       <span class="close">&times;</span>
      
-      Text<img src="TextIcon.png">
-      Image<img src="ImageIcon.png">
-      Video<img src="VideoIcon.png">
-      Sound<img src="SoundIcon.png">
-      Link<img src="LinkIcon.png">
+      Text<img src="img/TextIcon.png">
+      Image<img src="img/ImageIcon.png">
+      Video<img src="img/VideoIcon.png">
+      Sound<img src="img/SoundIcon.png">
+      Link<img src="img/LinkIcon.png">
  
     </div>
 
@@ -140,7 +140,7 @@
 
     <div class="modal-footer">
       <button id="myBtn">Select medias</button>
-<img src="Networks.jpg">
+<img src="img/Networks.jpg">
   
   </div>
 
