--- a/Profile.html
+++ b/Profile.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="ProfilePic">
-	<img src="Avatar.jpg">
+	<img src="img/Avatar.jpg">
 </div>
 
 
@@ -30,7 +30,7 @@
  </div>
  
 <div class="ClickLogo">
- <a href="Newsfeed.html"> <img src="logothin.png"></a>
+ <a href="Newsfeed.html"> <img src="img/logothin.png"></a>
  </div>
 
 
@@ -55,11 +55,11 @@
     <div class="modal-header">
       <span class="close">&times;</span>
 
-      Text<img src="TextIcon.png">
-      Image<img src="ImageIcon.png">
-      Video<img src="VideoIcon.png">
-      Sound<img src="SoundIcon.png">
-      Link<img src="LinkIcon.png">
+      Text<img src="img/TextIcon.png">
+      Image<img src="img/ImageIcon.png">
+      Video<img src="img/VideoIcon.png">
+      Sound<img src="img/SoundIcon.png">
+      Link<img src="img/LinkIcon.png">
 
     </div>
     <div class="modal-body">
@@ -67,7 +67,7 @@
     </div>
     <div class="modal-footer">
       <button id="myBtn">Select medias</button>
-      <img src="Networks.jpg">
+      <img src="img/Networks.jpg">
     </div>
   </div>
 
@@ -77,22 +77,22 @@
 	<div class="container">
   <div class="griding">
 
-  <img class="border-right" src="PostImag2.jpg" alt="" />
-  <img class="border-right" src="PostImag2.jpg" alt="" />
-  <img class="border-right" src="PostImag2.jpg" alt="" />
-  <img class="border-right" src="PostImag2.jpg" alt="" />
-   <img class="border-right" src="PostImag2.jpg" alt="" />
-   <img class="border-right" src="PostImag2.jpg" alt="" />
-   <img class="border-right" src="PostImag2.jpg" alt="" />
-    <img class="border-right" src="PostImag2.jpg" alt="" />
-   <img class="border-right" src="PostImag2.jpg" alt="" />
-   <img class="border-right" src="PostImag2.jpg" alt="" />
-   <img class="border-right" src="PostImag2.jpg" alt="" />
-   <img class="border-right" src="PostImag2.jpg" alt="" />
-    <img class="border-right" src="PostImag2.jpg" alt="" />
-    <img class="border-right" src="PostImag2.jpg" alt="" />
-    <img class="border-right" src="PostImag2.jpg" alt="" />
-    <img class="border-right" src="PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
+  <img class="border-right" src="img/PostImag2.jpg" alt="" />
 
 </div>
 </div>
