--- a/Settings.html
+++ b/Settings.html
@@ -23,7 +23,7 @@
  </div>
  
 <div class="ClickLogo">
- <a href="Newsfeed.html"> <img src="logothin.png"></a>
+ <a href="Newsfeed.html"> <img src="img/logothin.png"></a>
  </div>
 
 
@@ -44,18 +44,18 @@
   <div class="modal-content">
     <div class="modal-header">
       <span class="close">&times;</span>
-        Text<img src="TextIcon.png">
-      Image<img src="ImageIcon.png">
-      Video<img src="VideoIcon.png">
-      Sound<img src="SoundIcon.png">
-      Link<img src="LinkIcon.png">
+        Text<img src="img/TextIcon.png">
+      Image<img src="img/ImageIcon.png">
+      Video<img src="img/VideoIcon.png">
+      Sound<img src="img/SoundIcon.png">
+      Link<img src="img/LinkIcon.png">
     </div>
     <div class="modal-body">
       <p>Write...</p>
     </div>
     <div class="modal-footer">
      <button id="myBtn">Select medias</button>
-     <img src="Networks.jpg">
+     <img src="img/Networks.jpg">
     </div>
   </div>
 
