--- a/Signup.html
+++ b/Signup.html
@@ -15,7 +15,7 @@
 <div class="nav">
 <ul>
 
- <a href="index.html"><img src="logo.png"></a>
+ <a href="index.html"><img src="img/logo.png"></a>
 
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="AboutContact.html">About</a></li>
@@ -48,16 +48,16 @@
    
    <h2> Select social networks you wish to connect</h2>
   <div class="griding">
- <img id="desat" onclick="swapImage('desat','FBLogo.jpg','FBLogoDark.jpg')"src="FBLogo.jpg" title="" alt="Fig.: FBLogo."/>
- <img id="desa" onclick="swapImage('desa','PintLogo.jpg,'PintLogoDark.jpg',)"src="PintLogo.jpg" title="" alt="Fig.: PintLogo."/>
-<img id="des" onclick="swapImage('des','snap.jpg','snapD.jpg',)"src="snap.jpg" title="" alt="Fig.: snap."/>
-<img id="de" onclick="swapImage('de','V.jpg','VD.jpg',)"src="V.jpg" title="" alt="Fig.: V."/>
-<img id="d" onclick="swapImage('d','In.jpg','InD.jpg',)"src="In.jpg" title="" alt="Fig.: In."/>
-<img id="cesat" onclick="swapImage('cesat','G.jpg','GD.jpg',)"src="G.jpg" title="" alt="Fig.: G."/>
-<img id="cesa" onclick="swapImage('cesa','Tumb.jpg','TumbD.jpg',)"src="Tumb.jpg" title="" alt="Fig.: Tumb."/>
-<img id="ces" onclick="swapImage('ces','Twit.jpg','TwitD.jpg',)"src="Twit.jpg" title="" alt="Fig.: Twit."/>
-<img id="ce" onclick="swapImage('ce','You.jpg','YouD.jpg',)"src="You.jpg" title="" alt="Fig.: You."/>
-<img id="c" onclick="swapImage('c','Insta.jpg','InstaD.jpg',)"src="Insta.jpg" title="" alt="Fig.: Insta."/>
+ <img id="desat" onclick="swapImage('desat','img/FBLogo.jpg','img/FBLogoDark.jpg')"src="img/FBLogo.jpg" title="" alt="Fig.: FBLogo."/>
+ <img id="desa" onclick="swapImage('desa','img/PintLogo.jpg','img/PintLogoDark.jpg',)"src="img/PintLogo.jpg" title="" alt="Fig.: PintLogo."/>
+<img id="des" onclick="swapImage('des','img/snap.jpg','img/snapD.jpg',)"src="img/snap.jpg" title="" alt="Fig.: snap."/>
+<img id="de" onclick="swapImage('de','img/V.jpg','img/VD.jpg',)"src="img/V.jpg" title="" alt="Fig.: V."/>
+<img id="d" onclick="swapImage('d','img/In.jpg','img/InD.jpg',)"src="img/In.jpg" title="" alt="Fig.: In."/>
+<img id="cesat" onclick="swapImage('cesat','img/G.jpg','img/GD.jpg',)"src="img/G.jpg" title="" alt="Fig.: G."/>
+<img id="cesa" onclick="swapImage('cesa','img/Tumb.jpg','img/TumbD.jpg',)"src="img/Tumb.jpg" title="" alt="Fig.: Tumb."/>
+<img id="ces" onclick="swapImage('ces','img/Twit.jpg','img/TwitD.jpg',)"src="img/Twit.jpg" title="" alt="Fig.: Twit."/>
+<img id="ce" onclick="swapImage('ce','img/You.jpg','img/YouD.jpg',)"src="img/You.jpg" title="" alt="Fig.: You."/>
+<img id="c" onclick="swapImage('c','img/Insta.jpg','img/InstaD.jpg',)"src="img/Insta.jpg" title="" alt="Fig.: Insta."/>
 
 </form>
 
