--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="nav">
 <ul>
-<img src="logo.png">
+<img src="img/logo.png">
 
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="AboutContact.html">About</a></li>
@@ -27,7 +27,7 @@
 
 
 <div class="Laptop">
-    <img src="Laptop.jpg">
+    <img src="img/Laptop.jpg">
 </div>
 
 
